@@ -68,9 +68,9 @@ test_gpasm_regressions()
 
   for src in "$REGRESSION/test/"*.asm; do
     out="${src%.*}.hex"
-    cmd="$GPASM --strict-options -I $HEADER -I $REGRESSION/test $src -o $out"
+    cmd="\"$GPASM\" --strict-options -I \"$HEADER\" -I \"$REGRESSION/test\" \"$src\" -o \"$out\""
     echo $cmd
-    $cmd
+    eval $cmd
     ret=$?
     [ $ret -ne 0 ] && return 1
   done
